# grocery-list-service

./: .env.example  .gitignore  .vercelignore  ALEMBIC_QUICK_REF.md  README.md  VERCEL_DEPLOYMENT.md  alembic.ini  grocery-list.db  pyproject.toml  requirements.txt  vercel.json
alembic/: README  env.py
alembic/versions/: 001_add_store_column.py  002_add_is_closed_to_grocery_lists.py  003_add_list_date_to_grocery_lists.py  37f563616fc7_add_stores_to_list_make_name_optional.py  7ddb21fdb6d5_initial_schema.py
app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routes/: items.py  lists.py
